<resources>
    <string name="app_name">location mind</string>
    <string name="btn1">开始地理围栏服务</string>
    <string name="btn2">停止地理围栏服务</string>
    <string name="title_activity_map">MapActivity</string>

    <!--CheckPermissions Activity 字符串资源 -->
    <string name="notifyTitle">申请权限</string>
    <string name="notifyMsg">需要地理权限</string>
    <string name="cancel">取消</string>
    <string name="setting">去设置</string>


    <!--Main Activity 字符串资源 -->
    <string name="Update_service">强制保存所有提醒</string>
    <string name="stop_service">停止服务</string>
    <string name="other_service">其他服务</string>
    <string name="checkbox_tip">正在运行</string>
    <string name="fab_tip">添加提醒</string>


    <!--Add Reminder Activity 字符串资源 -->
    <string name="TextView_task_tip">请输入任务</string>
    <string name="TextView_location_tip">请输入地点</string>
    <string name="checkbox_in">进入</string>
    <string name="checkbox_out">离开</string>
    <string name="checkbox_stay">停留</string>
    <string name="button_back">取消</string>
    <string name="button_add">保存</string>


    <string name="search_hint_location">请输入地点名称</string>
    <string name="TextView_add_location">添加当前地点</string>
    <string name="TextView_add_diameter">围栏直径</string>


    <!--Map Select Activity 字符串资源 -->
    <string name="search_button_text">搜索地点</string>
    <string name="dialog_fire_missiles">添加当前地点</string>

    <string name="dialog_ok">确认</string>
    <string name="dialog_cancel">取消</string>
    <string name="title_activity_main2">Main2Activity</string>


</resources>
